admission/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-controller
spec:
  selector:
    matchLabels:
      app: admission-controller
  template:
    metadata:
      labels:
        app: admission-controller
    spec:
      containers:
      - name: admission-controller
        image: asankovcb/kubernetes-extensibility-admission
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /run/secrets/tls
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: admission-controller-certificates
