admission/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-controller
spec:
  type: NodePort
  selector:
    app: admission-controller
  ports:
  - port: 8080
