admission/k8s/admissionreview.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: conference-talk-validation.istacon.org
webhooks:
- name: conference-talk-validation.istacon.org
  clientConfig:
    service:
      namespace: default
      name: admission-controller
      port: 8080
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyakNDQWNJQ0NRREFkdXdvWCtaSXlEQU5CZ2txaGtpRzl3MEJBUXNGQURBdk1TMHdLd1lEVlFRRERDUkIKWkcxcGMzTnBiMjRnUTI5dWRISnZiR3hsY2lCWFpXSm9iMjlySUVSbGJXOGdRMEV3SGhjTk1qRXhNVEV6TWpNeApNREkzV2hjTk1qRXhNakV6TWpNeE1ESTNXakF2TVMwd0t3WURWUVFERENSQlpHMXBjM05wYjI0Z1EyOXVkSEp2CmJHeGxjaUJYWldKb2IyOXJJRVJsYlc4Z1EwRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRRElWR2xwMjVZZEhqbzAxNFM5S1VKdFhkaGJQQWxOY2JUQ0FCTWJXYmI1NytReWhiWEtPYUNGN1VtcwpVVUdPZkdHL3JDdW [...]
  rules:
  - apiGroups:
    - "istacon.org" # validate only resource of the istacon.org API group
    apiVersions:
    - "v1" # validate only resource of the v1 API version
    operations:  ["CREATE", "UPDATE"] # validate only CREATE and UPDATE operations
    resources:   ["conferencetalks"] # validate only ConferenceTalks resources
    scope:       "Namespaced"
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
